--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,3 +1,3 @@
 <app-main>
-    <app-data-management [entity]="entity" [subTitle]="'Manage your reports'" [thead]="thead" [data]="data"/>
+    <app-data-management [entity]="entity" [subTitle]="'Manage your reports'" [thead]="thead"/>
 </app-main>
