--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -44,10 +44,31 @@
       <div class="relative flex my-auto items-center w-2/3 sm:w-1/2  transition-all duration-500 ease-in-out">
         <input type="text"
                class="w-full rounded-lg p-2 border border-gray-300 focus:ring-0 focus:outline-none focus:border-gray-400"
-               [(ngModel)]="searchText"
+               [formControl]="searchText"
                placeholder="search"/>
-        <button class="absolute right-2" (click)="pushSearchText()">
-          <img src="search.png" alt="magnifying glass" class="w-5 h-5"/>
+        <button class="absolute right-16 pl-4 border-l-1 h-full flex items-center justify-center border-gray-200"
+                (click)="pushSearchText()">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
+                stroke="#8a1f1c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </g>
+          </svg>
+        </button>
+
+        <button class="absolute right-0 border-l-1 h-full flex items-center border-gray-200" (click)="resetSearchText()">
+          <svg viewBox="0 0 76.00 76.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+               version="1.1" baseProfile="full" enable-background="new 0 0 76.00 76.00" xml:space="preserve"
+               fill="#8a1f1c" width="46" height="46">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path fill="#8a1f1c" fill-opacity="1" stroke-width="0.00076"
+                    stroke-linejoin="round"
+                    d="M 47.5282,42.9497L 42.5784,38L 47.5282,33.0502L 44.9497,30.4718L 40,35.4216L 35.0502,30.4718L 32.4718,33.0502L 37.4216,38L 32.4718,42.9497L 35.0502,45.5282L 40,40.5784L 44.9497,45.5282L 47.5282,42.9497 Z M 18.0147,41.5355L 26.9646,50.4854C 28.0683,51.589 29,52 31,52L 52,52C 54.7614,52 57,49.7614 57,47L 57,29C 57,26.2386 54.7614,24 52,24L 31,24C 29,24 28.0683,24.4113 26.9646,25.5149L 18.0147,34.4645C 16.0621,36.4171 16.0621,39.5829 18.0147,41.5355 Z M 31,49C 30,49 29.6048,48.8828 29.086,48.3641L 20.1361,39.4142C 19.355,38.6332 19.355,37.3669 20.1361,36.5858L 29.086,27.6362C 29.6048,27.1175 30,27 31,27.0001L 52,27.0001C 53.1046,27.0001 54,27.8955 54,29.0001L 54,47.0001C 54,48.1046 53.1046,49.0001 52,49.0001L 31,49 Z "></path> </g></svg>
         </button>
       </div>
       <img alt="logo" src="huawei.png" class="w-8 h-8 sm:w-12 sm:h-12"/>
