--- a/src/app/components/error-popup/error-popup.component.html
+++ b/src/app/components/error-popup/error-popup.component.html
@@ -1,5 +1,5 @@
 <div
-  class="absolute flex items-center gap-2 text-lg left-[40%] right-[40%] top-10 w-[20%] z-20 bg-red-200 rounded-lg p-2 shadow-xl/25 animate-pulse">
+  class="absolute flex items-center gap-2 text-lg align-middle top-10 z-20 bg-red-200 rounded-lg p-2 shadow-xl/25 animate-pulse">
   <svg viewBox="0 0 24 24" class="w-7 h-7" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
