--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,6 +1,18 @@
 <div class="relative h-dvh w-screen flex items-center justify-center overflow-hidden">
   @if (!success) {
-    <app-error-popup [msg]="errorMessage"/>
+    <div
+    class="absolute flex items-center gap-2 text-lg self-center top-10 z-20 bg-red-200 rounded-lg p-2 shadow-xl/25 animate-pulse">
+    <svg viewBox="0 0 24 24" class="w-7 h-7" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+      <g id="SVGRepo_iconCarrier">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm-1.5-5.009c0-.867.659-1.491 1.491-1.491.85 0 1.509.624 1.509 1.491 0 .867-.659 1.509-1.509 1.509-.832 0-1.491-.642-1.491-1.509zM11.172 6a.5.5 0 0 0-.499.522l.306 7a.5.5 0 0 0 .5.478h1.043a.5.5 0 0 0 .5-.478l.305-7a.5.5 0 0 0-.5-.522h-1.655z"
+              class="fill-red-500"></path>
+      </g>
+    </svg>
+    <p class="text-red-500">{{ errorMessage }}</p>
+  </div>
   }
   <div
     class="absolute top-0 h-[120%] w-full bg-gradient-to-r from-red-900 via-[#d94551] to-[#f8ae95] clip-diagonal"></div>
@@ -10,8 +22,7 @@
         <p class="font-semibold text-2xl pb-1">Welcome to TrackIt</p>
         <p>Please provide your credentials to log in</p>
       </div>
-      <form class="flex flex-col gap-3 items-center justify-center h-full w-full"
-            method="post" [formGroup]="loginForm" (submit)="login()">
+      <form class="flex flex-col gap-3 items-center justify-center h-full w-full" [formGroup]="loginForm" (submit)="login()">
         <div class="flex flex-col w-1/2">
           <label for="idInput" class="font-semibold">
             ID:
